--- a/_posts/2019-07-05-the-us-narrative-today.html
+++ b/_posts/2019-07-05-the-us-narrative-today.html
@@ -583,107 +583,107 @@ stories:
   domain: http://www.boiseweekly.com/
   link: https://www.boiseweekly.com/boise/at-water-bear-bar-the-charm-is-all-around-and-the-quirky-is-in-the-details/Content?oid=18813160
 images:
-- name: los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-umberto-bocc.jpg
-- name: white-house-whitehouse-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-aqua.jpg
-- name: containership-containership-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-blue-electricity.jpg
-- name: castle-wall-DSC-0067-aqua.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-aqua.JPG
-- name: store-on-corner-store-deep-connections.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-deep-connections.jpg
-- name: downtheline-downtheline-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-crafty-painting.jpg
-- name: beach-rocks-beach-rocks-currents-jap-dys-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-rocks-beach-rocks-currents-jap-dys-1.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-colored-circuits.jpg
-- name: oldhouse-oldhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-blue-brush.jpg
-- name: border-crossing-bordercrossing-light-dali.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-light-dali.png
-- name: border-crossing-bordercrossing-space-pizza.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-space-pizza.png
-- name: old-door-lock-old-door-lock-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-attack-planes.jpg
-- name: legal-statue-legalstatue-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-matrix.jpg
-- name: walled-garden-walled-garden-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-purple-storm.jpg
-- name: old-door-lock-old-door-lock-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dali-three.jpg
-- name: death-valley-death-valley-national-park-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-post-modern.jpg
-- name: hollywood-building-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-marcel-duchamp.jpg
-- name: sand-hand-sand-hand-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/sand-hand-sand-hand-cinnamon-rolls.jpg
-- name: old-cabin-oldcabin-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-space-pizza.jpg
-- name: old-church-oldchurch-graham-sutherland.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-graham-sutherland.jpg
-- name: server-cloud-server-racks-clouds-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-crunch-paper.jpg
-- name: stories-ellis-island-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-ellis-island-nazi-poster.jpg
-- name: crow-crow-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-far-away.jpg
-- name: statue-of-liberty-front-view-statueofliberty-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-atari-asteroids.jpg
-- name: oldroad-old-road-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-mucha-mult.jpg
-- name: amusement-park-amusement-park-2-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-blue-brush.jpg
-- name: oldhousecars-house-old-cars-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-light-dali.jpg
-- name: los-angeles-from-observatory-losangeles-from-observatory-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-dali.jpg
-- name: stories-power-lines-empty-space-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-power-lines-empty-space-sunday.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-alberto-giacometti.jpg
-- name: art-museum-art-museum-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-light-dali.jpg
-- name: cargo-ship-cargo-ship-on-sea-colored-circuits.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-colored-circuits.jpg
-- name: oldhouse-granaryfield-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-ww2-color.jpg
-- name: stories-power-lines-empty-space-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-power-lines-empty-space-copper-circuit.jpg
-- name: legal-statue-legalstatue-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-ww2-dresden.jpg
-- name: crow_dali_two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dali_two.jpg
-- name: downtown-fredericksburg.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg.JPG
-- name: death-valley-death-valley-national-park-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-purple-storm.jpg
-- name: capital-battle-capitolbattle-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-dark-dali.jpg
-- name: paris-paris-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-dark-dali.jpg
-- name: stories-schoolhouse-clouds-dark-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-schoolhouse-clouds-dark-dali.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-crunch-paper.jpg
-- name: window-window-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-dali-three.jpg
-- name: beach-clouds-lifeguard-beachclouds-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-mucha-mult.jpg
-- name: white-house-lawn-white-house-window-constitution.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-constitution.jpg
-- name: server-cloud-server-racks-door-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-sand-paper.jpg
-- name: white-house-lawn-white-house-lawn-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-alien-goggles.jpg
-- name: containership-containership-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-dark-rain.jpg
-- name: rain-princess-DSC_0029.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0029.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-dark-soul.jpg
-- name: mistywoods-babyfoot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot.jpg
+- name: yosemite-yosemite-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-oily-mcoilface.jpg
+- name: copper-circuit-IMG_7936.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_7936.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-mucha-mult.jpg
+- name: fence-mexico-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-diego-rivera1.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-dark-dali.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-hot-spicy.jpg
+- name: old-gas-pumps-oldgaspumps-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-gas-pumps-oldgaspumps-internet-numbers.jpg
+- name: machine-road-machine-road-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-jap-wav-pr.jpg
+- name: docks-docks-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-creativity.jpg
+- name: curtain-curtain-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-nazi-poster.jpg
+- name: christianity-christianity-under-construction-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-light-dali.jpg
+- name: old-door-lock-old-door-lock-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-dry-skin.jpg
+- name: nazi-invasion-DSC_0115.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0115.jpg
+- name: locked-up-steam-lock-up-steam-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-plentiful.jpg
+- name: server-racks-door.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-racks-door.jpg
+- name: adam-smith-adam-smith-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-hot-spicy.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-circuit-3.jpg
+- name: beach-clouds-lifeguard-beachclouds-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-diego-rivera1.jpg
+- name: oldtrain-oldtrain-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-ww2-dresden.jpg
+- name: border-fence-border-fence-on-hill-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-blue-electricity.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-aqua.jpg
+- name: razorcliff-razorcliff-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-purp-paper.jpg
+- name: castle-wall-DSC-0067-copper-circuit.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-copper-circuit.JPG
+- name: containership-containership-post-modern.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-post-modern.jpg
+- name: blossombar-clean-view-file-00-00-24-99.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-clean-view-file-00-00-24-99.jpg
+- name: oldhousecars-house-old-cars-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhousecars-house-old-cars-dry-skin.jpg
+- name: hollywood-building-hollywood-building-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-crunch-paper.jpg
+- name: carry-load-carryload-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-crabapple.jpg
+- name: downtown-los-angeles-downtown-la-yellow-paper.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-yellow-paper.JPG
+- name: supreme-court-supremecourt-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-smooth-ride.jpg
+- name: oldroad-old-road-kandinsky-bv.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-kandinsky-bv.jpg
+- name: oldsmallboat-oldsmallboat-aqua.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-aqua.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-purp-paper.jpg
+- name: locked-up-steam-lock-up-steam-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-creativity.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-dark-soul.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh-dali-three.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh-dali-three.JPG
+- name: catacombs-catacombs-bright-sand.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-bright-sand.jpg
+- name: adam-smith-adam-smith-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-neo-instinct.jpg
+- name: oldhotel-oldhotel-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-atari-asteroids.jpg
+- name: old-granary-field-oldhouse-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-deep-connections.jpg
+- name: machine-road-machine-road-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-creativity.jpg
+- name: windowmountain-window-mountain-smooth-ride.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-smooth-ride.jpg
+- name: aws-s3-stories-new-16-77-800-500-0-max-0-1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-16-77-800-500-0-max-0-1--1.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-horiz-circuit.jpg
+- name: old-house-oldhouse-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-kand-two.jpg
+- name: razorcliff-razorcliff-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-ww2-dresden.jpg
+- name: birdhouse-birdhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-sand-paper.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-matrix.jpg
+- name: castle-wall-DSC-0067-attack-planes.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-attack-planes.JPG
+- name: dc-statue-dcstatue-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-blue-electricity.jpg
+- name: fence-mexico-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-gred-mash.jpg
 ---
 Exercise Is Important For Everyone, Especially People With Disabilities.&nbsp;Dont Let Summer Pests Bug You.&nbsp;How To Have The Best Space For Your Organization?.&nbsp;Safe Canning Practices Keep Everyone Healthy.&nbsp;34th Pawnee Bill Rodeo Might Be One Of Best Ever.&nbsp;Women's World Cup Semifinal Recap.&nbsp;Media Coalition Files Complaint About Senate.&nbsp;Individual Manchester Football Shirts.&nbsp;
